# django-landing

./: .gitignore  Caddyfile  Caddyfile_local  Dockerfile  README.md  caddy-compose.yaml  compose.yaml  compose_local.yaml  create_schema.sh  entrypoint.sh  manage.py  pyproject.toml  run_caddy.sh  setup.cfg
.github/workflows/: push.yaml
django_landing/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
landing/: admin.py  api_views.py  forms.py  models.py  urls.py  views.py
landing/import/: pl.py
landing/management/commands/: parse_page.py
landing/migrations/: 0001_initial.py  0002_alter_page_template.py
landing/scripts/: url_import.py
landing/services/: page_parser.py
landing/static/css/: editor.css  styles.css
landing/static/js/: editor.js
landing/static/page_politisuitecom/css/: ps.css
landing/static/page_tradepluspluscom/css/: tr.css
landing/templates/: base.html  index.html  landing_basic.html  landing_basic_debug.html  landing_basic_debug_simple.html
landing/templates/admin/landing/page/: change_list.html  import_page.html
landing/templates/elements/: _button.html  _card.html  _container.html  _default.html  _element_base.html  _form.html  _grid.html  _header.html  _image.html  _input.html  _label.html  _legend.html  _list.html  _list_item.html  _pageheader.html  _section.html  _text.html  _textarea.html
landing/templatetags/: element_tags.py
staticfiles/page_politisuitecom/css/: font-awesome.min.css  ps.css
terraform/: main.auto.tfvars  main.tf  outputs.tf  provider.tf  variables.tf
tests/: conftest.py
